# openGL_practice

./: .gitignore  README
blendshape/: hello_cubemap.cpp
ctmtools/: 3ds.cpp  bin2c  convoptions.cpp  ctm.cpp  ctm.h  lwo.cpp  makefile  mesh.cpp  obj.cpp  off.cpp  stl.cpp  wrl.cpp
expression_visualizer/: .gitignore  CMakeLists.txt  hello_cubemap.cpp  merge_2_video.py  merge_n_video.py  merge_to_video.py
expression_visualizer/data/: cam_0.txt  cam_100.txt  cam_101.txt  cam_102.txt  cam_103.txt  cam_104.txt  cam_105.txt  cam_106.txt  cam_107.txt  cam_108.txt  cam_109.txt  cam_11.txt  cam_110.txt  cam_111.txt  cam_112.txt  cam_113.txt  cam_114.txt  cam_115.txt  cam_116.txt  cam_117.txt  cam_118.txt  cam_119.txt  cam_127.txt  cam_128.txt  cam_129.txt  cam_130.txt  cam_131.txt  cam_132.txt  cam_134.txt  cam_136.txt  cam_137.txt  cam_138.txt  cam_139.txt  cam_140.txt  cam_141.txt  cam_142.txt  cam_143.txt  cam_144.txt  cam_145.txt  cam_146.txt  (+425 more)
expression_visualizer/shaders/: lamp_vertex.glsl  vertex.glsl  vertex_cube.glsl
landmark_matching_blendshape/: CMakeLists.txt  hello_cubemap.cpp  kpt_index.pts
lib/: glad.c
openFaceScripts/: 2_3dmm.py  apply_pose.py  auto_script.py  centers.pkl  centers_train.pkl  clustered_labels.pkl  clustered_labels_train.pkl  colors.pkl  extract_frame_one_id.py  extract_mouth_landmarks.py  face_swap.py  filelist.csv  gather_images.py  land_marks.pkl  land_marks_train.pkl  landmarks_array_normalized.pkl  landmarks_array_normalized_train.pkl  list_file.pkl  list_file_train.pkl  make_training_set.py  map.pkl  map_mouth.py  move_all_files.py  normalize_face_landmarks.py  output_landmark3d_obama.pkl  output_landmark_3d_for_flame.py  parse_face.py  replace_mouths.py  replace_mouths_final_phase.py  replace_mouths_second_phase.py  sp.pkl
sample_texture/: hello_texture.cpp  makefile  vertex_backup.glsl
src/: FileUtils.cpp  Shader.cpp  StatusSingleton.cpp  general_utils.cpp  graphics_utils.cpp  image_utils.cpp  string_utils.cpp
syntethic_data/: CMakeLists.txt  Makefile  hello_cubemap.cpp  vertex_backup.glsl
syntethic_data/AFLW2000_results/: image03614.txt
syntethic_data/data/: cam_1.txt  cam_10.txt  cam_100.txt  cam_101.txt  cam_102.txt  cam_103.txt  cam_104.txt  cam_106.txt  cam_107.txt  cam_108.txt  cam_109.txt  cam_11.txt  cam_110.txt  cam_111.txt  cam_112.txt  cam_113.txt  cam_114.txt  cam_115.txt  cam_116.txt  cam_118.txt  cam_12.txt  cam_122.txt  cam_123.txt  cam_124.txt  cam_125.txt  cam_126.txt  cam_129.txt  cam_13.txt  cam_130.txt  cam_131.txt  cam_132.txt  cam_133.txt  cam_134.txt  cam_135.txt  cam_136.txt  cam_137.txt  cam_138.txt  cam_139.txt  cam_14.txt  cam_140.txt  (+106 more)
texturedBlendShape/: CMakeLists.txt  hello_cubemap.cpp
tutorial10_materials/: Camera.h  fragment.glsl  hello_material.cpp  makefile  vertex.glsl
tutorial11_lighting_map/: Shader.cpp  Shader.h  fragment.glsl  hello_diffuse_map.cpp  vertex.glsl
tutorial12_light_caster/: fragment.glsl  hello_diffuse_map.cpp  hello_light_caster.cpp  makefile
tutorial13_multiple_light/: Shader.cpp  fragment.glsl  hello_mplights.cpp  makefile
tutorial14_model_loading/: .ycm_extra_conf.py  fragment.glsl  hello_model_loading.cpp  makefile
tutorial15_stencil_testing/: 4  fragment.glsl  fragment_stencil.glsl  hello_stencil_testing.cpp  makefile
tutorial16_framebuffers/: fragment_backup.glsl  hello_framebuffer.cpp  makefile
tutorial17_cubemap/: .gitignore  fragment.glsl  fragment_backup.glsl  lamp_fragment.glsl  (+1 more)
tutorial2_triangle/: CMakeLists.txt  Makefile  hello_triangle.cpp  makefile  vertex.glsl
(+153 files in other folders)
